# kolmogorov_arnold_networks

./: README.md  pyproject.toml
.github/workflows/: ci-python.yml
kan/network/: linear.py
